crates/data-dict/tests/snapshots/validate_spec__s02_missing_table.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
# expected: S02
# The relationship references `category` but that table doesn't exist; the
# defined table is `food_category`. `food_category_id` is left unconstrained so
# only S02 fires (a `foreign_key` would add S01, a missing column S03).

$version: "0.1.0"

tables:
  - name: food
    columns:
      - name: id
        type: number(id)
        constraints: [primary_key]
        examples: [1, 2]
      - name: food_category_id
        type: number(id)
        examples: [1, 2]

  - name: food_category
    columns:
      - name: id
        type: number(id)
        constraints: [primary_key]
        examples: [1, 2]

relationships:
  - join: food.food_category_id = category.id
    cardinality: many-to-one
────────────────────────────────────────
error[S02]: A `join` must refer to known tables.
  --> spec/s02-missing-table.yaml:27:35
   |
LL |   - join: food.food_category_id = category.id
   |                                   ^^^^^^^^^^^ table `category` is not defined
